--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <div class="hero-unit">
       <h1>'Allo, 'Allo!</h1>
       <p>You now have</p>
+      <p>hola soy La belleza</p>
       <ul>
         <li>HTML5 Boilerplate</li>
         <li>Sass</li>
